// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BooksHero matches snapshot (dark mode) 1`] = `
<div>
  <section
    class="css-rf02r8"
    data-testid="books-hero"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
    >
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-dlcty3-MuiTypography-root"
          >
            10
             books read
          </p>
        </div>
        <div>
          <h1
            class="css-1s1yhwe"
          >
            My Reading Library
          </h1>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1yhe6c8-MuiTypography-root"
          >
            A collection of books that have shaped my thinking — from software craft to philosophy, psychology, and everything in between.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`BooksHero matches snapshot (light mode) 1`] = `
<div>
  <section
    class="css-1pxfoyb"
    data-testid="books-hero"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthMd css-u4uvlt-MuiContainer-root"
    >
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1wlzstl-MuiTypography-root"
          >
            10
             books read
          </p>
        </div>
        <div>
          <h1
            class="css-6yer5h"
          >
            My Reading Library
          </h1>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-nfqx83-MuiTypography-root"
          >
            A collection of books that have shaped my thinking — from software craft to philosophy, psychology, and everything in between.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;
